Add GitHub Actions automatic deployment workflow
- Configure automatic deployment to GitHub Pages on main branch push
- Add deployment scripts for manual and automatic deployment
- Update README with deployment instructions
- Add .nojekyll file for proper GitHub Pages handling
- Add preview:gh script for local testing of GitHub Pages build

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build",
     "build:gh": "vite build --base=/flashcard/",
     "preview": "vite preview",
+    "preview:gh": "yarn build:gh && yarn serve",
     "serve": "http-server dist -p 3000 -c-1",
     "optimize": "npm run build && npm run analyze",
     "analyze": "npx vite-bundle-analyzer dist",
