--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "build:gh": "vite build --base=/flashcard/",
     "preview": "vite preview",
-    "preview:gh": "yarn build:gh && yarn serve",
+    "preview:gh": "yarn build:gh && npx serve dist -l 3000 --single",
+    "preview:gh-proper": "yarn build:gh && rd /s /q preview 2>nul & mkdir preview\\flashcard & xcopy /e /i dist preview\\flashcard && cd preview && npx http-server . -p 3000 -c-1 --cors -o /flashcard/",
     "serve": "http-server dist -p 3000 -c-1",
     "optimize": "npm run build && npm run analyze",
     "analyze": "npx vite-bundle-analyzer dist",
@@ -48,6 +49,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
+    "serve": "^14.2.5",
     "terser": "^5.26.0",
     "vite": "^7.2.2",
     "vite-bundle-analyzer": "^0.7.0",
