--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-dom": "^18.2.0"
   },
   "engines": {
-    "node": ">=16.0.0",
+    "node": "^20.19.0 || >=22.12.0",
     "npm": ">=8.0.0"
   },
   "browserslist": [
