Add permissions for GitHub Actions deployment
- Add contents: write permission to workflow
- Fix 'Permission denied' error for github-actions[bot]
- Allow deployment to gh-pages branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+# Sets permissions for deployment
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
