Fix PWA deployment issues and console errors
- Add icon copying step to GitHub Actions workflow
- Fix deprecated apple-mobile-web-app-capable meta tag
- Add mobile-web-app-capable meta tag
- Create missing favicon.png and favicon.svg files
- Update includeAssets to include favicon files
- Fix 404 errors for PWA icons and favicons
- Resolve 'Download error or resource isn't a valid image' errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,14 @@ jobs:
     - name: Build for GitHub Pages
       run: yarn build:gh
       
+    - name: Copy icons for PWA
+      run: |
+        cp pwa-192x192.png dist/pwa-192x192.png || true
+        cp pwa-512x512.png dist/pwa-512x512.png || true
+        cp favicon.png dist/favicon.png || true
+        cp favicon.svg dist/favicon.svg || true
+        cp -r android dist/android || true
+        
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
